--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
+    implementation 'com.github.pprathameshmore:Toasty:v1.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel:1.1.1"
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
     testImplementation 'junit:junit:4.12'
