--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -25,6 +26,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'android.arch.persistence.room:runtime:1.1.1'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.google.firebase:firebase-ads:17.0.0'
+    implementation 'com.google.firebase:firebase-inappmessaging-display:17.0.4'
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
     implementation 'com.github.pprathameshmore:Toasty:v1.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel:1.1.1"
